# gposttl

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  configure.in
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in  README  lemmatized_lexicon
doc/: Makefile.am  Makefile.in  gposttl.1
src/: Makefile.am  Makefile.in  bool.h  darray.c  darray.h  darrayP.h  enhance_penntag.c  enhance_penntag.h  final-state-tagger.c  gposttl.c  lex.c  lex.h  memory.c  memory.h  registry.c  registry.h  registryP.h  start-state-tagger.c  sysdep.h  tagger.c  tagger_controller.c  tokenizer.c  useful.c  useful.h
